modified index.html in development branch

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Home page</h1>
     <div>This is a div tag</div>
-    
+    <p>This para is added in development branch</p>
 </body>
 </html>
 
