--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h1>Home page</h1>
     <div>This is a div tag</div>
     <p>This para is added in development branch</p>
+    <form>
+        <input type="text">
+        <input type="submit">
+    </form>
 </body>
 </html>
 
