modified index.html in main

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Home page</h1>
     <div>This is a div tag</div>
     <p>This para is added in development branch</p>
+    <div>Div1</div>
+    <div>Div2</div>
 </body>
 </html>
 
